@@ -1,51 +1,51 @@
 --- Makefile.orig	1999-07-19 12:56:27 UTC
 +++ Makefile
 @@ -4,43 +4,44 @@
- 
+
  ####### Installation directory
- 
+
 -XGLOBE_DIR     = /usr/local
 -XGLOBE_LIB_DIR = $(XGLOBE_DIR)/lib/xglobe
 +XGLOBE_DIR     = $(PREFIX)
 +XGLOBE_LIB_DIR = $(XGLOBE_DIR)/share/xglobe
  XGLOBE_BIN_DIR = $(XGLOBE_DIR)/bin
- 
+
  ####### Library directories - you may need to modify these
- 
+
 -X11_INCLUDE_DIR = /usr/X11R6/include
 -QT_INCLUDE_DIR  = $(QTDIR)/include
 +X11_INCLUDE_DIR = $(LOCALBASE)/include
-+QT_INCLUDE_DIR  = $(QT_PREFIX)/include/qt4
- 
++QT_INCLUDE_DIR  = $(PREFIX)/include/qt4
+
 -QT_LIB_DIR      = $(QTDIR)/lib
 -X11_LIB_DIR     = /usr/X11R6/lib
-+QT_LIB_DIR      = $(QT_PREFIX)/lib/qt4
++QT_LIB_DIR      = $(PREFIX)/lib/qt4
 +X11_LIB_DIR     = $(LOCALBASE)/lib
- 
- 
+
+
  ####### Compiler and tools
- 
+
 -CPP     = g++
 -LINK    = g++
 -MOC     = moc
 +CXX    ?= c++
-+CPP     = ${CXX} 
-+LINK    = ${CXX} 
++CPP     = ${CXX}
++LINK    = ${CXX}
 +MOC     = moc-qt4
  INSTALL = install
- 
+
  ####### compile and link options
- 
+
 -CFLAGS       = $(INCLUDE_DIRS) -DXGLOBE_LIB_DIR=\"$(XGLOBE_LIB_DIR)\" $(WITH_QIMGIO) -O2 -Wall
 +CFLAGS       += -DQT3_SUPPORT $(INCLUDE_DIRS) -DXGLOBE_LIB_DIR=\"$(XGLOBE_LIB_DIR)\" $(WITH_QIMGIO)
- 
+
  LFLAGS       =
- 
+
 -INCLUDE_DIRS = -I$(QT_INCLUDE_DIR) -I$(X11_INCLUDE_DIR)
 +INCLUDE_DIRS = -I$(QT_INCLUDE_DIR) -I$(QT_INCLUDE_DIR)/Qt -I$(QT_INCLUDE_DIR)/QtGui -I$(X11_INCLUDE_DIR)
- 
+
  LIB_DIRS     = -L$(QT_LIB_DIR) -L$(X11_LIB_DIR)
- 
+
 -LIBS         = -lX11 -lqt -lm
 +LIBS         = -lX11 -lQtCore -lQt3Support -lQtGui  -lm -pthread
  # If you want to use the QImageIO lib (to support jpg and png maps) use the
@@ -56,6 +56,6 @@
  # If the linker complains about unresolved references try this:
 -#LIBS         = -lX11 -lqt -lm -lqimgio -lpng -lz -ljpeg
 +#LIBS         = -lX11 -lqt1 -lm -lqimgio -lpng -lz -ljpeg
- 
+
  ####### Target
- 
+
