@@ -46,7 +46,7 @@ FLTK_DESC=		FLTK GUI toolkit
 FLTK_LIB_DEPENDS=	libfltk.so:x11-toolkits/fltk
 FLTK_MAKE_ENV=		fl=1
 QT4_USE=		QT4=corelib,gui,moc_build
-QT4_MAKE_ENV=		qt=1 qt4=1 QTDIR="${QT_PREFIX}"
+QT4_MAKE_ENV=		qt=1 qt4=1 QTDIR="${PREFIX}"
 QT4_CPPFLAGS=		-I${QT_INCDIR}
 QT4_LDFLAGS=		-L${QT_LIBDIR}
 SSL_USE=		OPENSSL=yes
