@@ -27,7 +27,7 @@ QT_NONSTANDARD=	yes
 USE_OPENSSL=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-boost=${LOCALBASE}/include \
-		--with-subversion=${LOCALBASE} --with-qt=${QT_PREFIX} \
+		--with-subversion=${LOCALBASE} --with-qt=${PREFIX} \
 		--with-apr=${LOCALBASE}/bin/apr-1-config \
 		--with-apr-util=${LOCALBASE}/bin/apu-1-config \
 		--with-openssl=${OPENSSLBASE}
