@@ -54,7 +54,7 @@ PDF_IMPLIES=		FREETYPE GHOSTSCRIPT
 QT4_USE=		qt4=accessible,corelib,gui,imageformats \
 			qt4=moc_build,qmake_build,rcc_build,uic_build
 QT4_USE_OFF=		xorg=xext
-QT4_CONFIGURE_ON=	--with-qt=${QT_PREFIX} --enable-qtpipes
+QT4_CONFIGURE_ON=	--with-qt=${PREFIX} --enable-qtpipes
 QT4_CONFIGURE_OFF=	--disable-qt
 QT4_VARS=		QT_PLUGINS_LIST="accessible imageformats"
 QT4_VARS_OFF=		QT_PLUGINS_LIST=""
