@@ -26,7 +26,7 @@ USE_QT4=	corelib declarative gui moc_build \
 USE_SDL=	sdl
 
 CXXFLAGS+=	-I${LOCALBASE}/include/SDL/
-MAKE_ARGS=	QTDIR="${QT_PREFIX}" QMAKE="${QMAKE}" \
+MAKE_ARGS=	QTDIR="${PREFIX}" QMAKE="${QMAKE}" \
 		SYSCONFDIR="${PREFIX}/etc" ARCH="${OPSYS}" \
 		CC_FLAGS="${CFLAGS} -DUSE_FILE32API" \
 		CXX_FLAGS="${CXXFLAGS} -DUSE_FILE32API" \
