@@ -26,7 +26,7 @@ MAKE_ENV?=	QTDIR=${WRKSRC} LD_LIBRARY_PATH=${WRKSRC}/lib:$$LD_LIBRARY_PATH \
 
 # qtlogo.png is installed by qt4-gui
 DESKTOP_ENTRIES="Qt 4 Examples and Demos" "" \
-		"${QT_PREFIX}/share/pixmaps/qtlogo.png" \
+		"${PREFIX}/share/pixmaps/qtlogo.png" \
 		"${PREFIX}/${QT_BINDIR_REL}/qtdemo" \
 		"Development;Qt;" true
 
