@@ -41,12 +41,12 @@ DESTDIRNAME=	INSTALL_ROOT
 
 DATADIR=	${PREFIX}/share/mythtv
 
-MAKE_ENV=	QTDIR="${QT_PREFIX}" \
+MAKE_ENV=	QTDIR="${PREFIX}" \
 		QMAKESPEC="${QMAKESPEC}"
 
 CPPFLAGS+=	${QTCPPFLAGS}
 CONFIGURE_ENV+=	QMAKESPEC="${QMAKESPEC}" MOC="${MOC}" \
-		QTDIR="${QT_PREFIX}" \
+		QTDIR="${PREFIX}" \
 		PKG_CONFIG_PATH="${LOCALBASE}/libdata/pkgconfig"
 LDFLAGS+=	-L${LOCALBASE}/lib
 
