@@ -47,12 +47,12 @@ DESTDIRNAME=	INSTALL_ROOT
 USERS=		mythtv
 GROUPS=		mythtv
 
-MAKE_ENV=	QTDIR="${QT_PREFIX}" \
+MAKE_ENV=	QTDIR="${PREFIX}" \
 		QMAKESPEC="${QMAKESPEC}"
 
 CPPFLAGS+=	${QTCPPFLAGS}
 CONFIGURE_ENV+=	QMAKESPEC="${QMAKESPEC}" MOC="${MOC}" \
-		QTDIR="${QT_PREFIX}"
+		QTDIR="${PREFIX}"
 CONFIGURE_ENV+=	PKG_CONFIG_PATH="${LOCALBASE}/libdata/pkgconfig"
 LDFLAGS+=	-L${LOCALBASE}/lib
 
