@@ -1,3 +1,3 @@
 lib/kde4/plugins/phonon_backend/phonon_vlc.so
 share/kde4/services/phononbackends/vlc.desktop
-%%QT_PREFIX%%/%%QT_PLUGINDIR%%/phonon_backend/libphonon_vlc.so
+%%QT_PLUGINDIR%%/phonon_backend/libphonon_vlc.so
