@@ -37,7 +37,7 @@ PYTHON_USES=			python:2
 
 QT4_USE=			XORG=ice,sm,x11,xext,xi,xmu,xt \
 				QT4=corelib,gui,linguisttools_build,moc_build,uic_build
-QT4_CONFIGURE_ON=		--with-Qt-dir=${QT_PREFIX} \
+QT4_CONFIGURE_ON=		--with-Qt-dir=${PREFIX} \
 				--with-Qt-lib="QtGui -lQtCore"
 QT4_CONFIGURE_ENABLE=		silex
 QT4_VARS=			QT_NONSTANDARD=yes
