@@ -19,7 +19,7 @@ USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 # qt5logo.png is installed by qt5-widgets.
 DESKTOP_ENTRIES="Qt 5 QML viewer" "" \
-		"${QT_PREFIX}/share/pixmaps/qt5logo.png" \
+		"${PREFIX}/share/pixmaps/qt5logo.png" \
 		"${PREFIX}/${QT_BINDIR_REL}/qmlviewer" \
 		"Development;Qt;" true
 
